<?xml version="1.0"?>
<package format="2">
  <name>molab_hardware</name>
  <version>0.0.0</version>
  <description>
    Launch files and configuration for UNH's mobile lab.
  </description>

  <author email="roland@ccom.unh.edu">Roland Arsenault</author>
  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
